feat: Pushing db globally

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "air"
+    "dev": "air",
+    "db:push": "echo 'pushing'"
   },
   "keywords": [],
   "author": "",
