--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "bingo",
   "private": true,
   "scripts": {
+    "env": "./env-cpy.sh",
     "build": "turbo run build",
     "dev": "turbo run dev",
+    "db:push": "turbo run db:push",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types"
