--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
+  "globalDependencies": [".env"], // All task hashes
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
@@ -16,6 +17,7 @@
     "dev": {
       "cache": false,
       "persistent": true
-    }
+    },
+    "db:push": {}
   }
 }
