feat: Add prep script for getting dependencies

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "air",
+    "prep": "go mod tidy",
     "db:push": "echo 'pushing'"
   },
   "keywords": [],
